reverse-proxy/musicfinder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicfinder-deployment
  labels:
    app: musicfinder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicfinder
  template:
    metadata:
      labels:
        app: musicfinder
    spec:
      containers:
      - name: node-backend
        image: us-central1-docker.pkg.dev/prefab-surfer-447104-r9/spotify/backend-nodejs:1.0.6
        ports:
          - containerPort: 3001
      - name: next-frontend
        image: us-central1-docker.pkg.dev/prefab-surfer-447104-r9/spotify/frontend-nextjs:1.0.1
        ports:
          - containerPort: 3000

      - name: nginx-reverse-proxy
        image: nginx:1.23-alpine
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d

      volumes:
        - name: nginx-config
          configMap:
            name: my-nginx-config
            # Key of configMap file to mount. If you have a single "default.conf", 
            # it will automatically be placed in /etc/nginx/conf.d/default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: musicfinder-service
  labels:
    app: musicfinder
spec:
  type: NodePort
  selector:
    app: musicfinder
  ports:
    - port: 80           # The service's port (client will connect here)
      targetPort: 80     # The container's port in the Pod (Nginx)
